Bug 416064 - Context menu option 'add to places' shouldn't show the entire name
Summary: Context menu option 'add to places' shouldn't show the entire name
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.12.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-09 19:09 UTC by Lucia Mrenica
Modified: 2020-01-13 15:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lucia Mrenica 2020-01-09 19:09:13 UTC
SUMMARY
...if it's length would make the entire menu wider.

STEPS TO REPRODUCE
1. Right click on a folder with a long name

OBSERVED RESULT
Because of the length of the name, 'add to places' option streches the entire context menu.

EXPECTED RESULT
The end of the file name should be cut off, so the context menu isn't streched.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.65
Qt Version: 5.14
Comment 1 Nate Graham 2020-01-10 23:23:34 UTC
I should probably just take the name out of the menu item entirely. No other menu item that acts on a selected file does this. I did it this way because it was a bit odd in the viewport context menu to not have the name, but it's worse for everything else.
Comment 2 Nate Graham 2020-01-11 20:08:16 UTC
Submitted a patch: https://phabricator.kde.org/D26590
Comment 3 Nate Graham 2020-01-13 15:11:51 UTC
Git commit 897ce8480c9c281f0501d201e33b6b0e8e7dd9a6 by Nate Graham.
Committed on 13/01/2020 at 15:11.
Pushed by ngraham into branch 'master'.

Use more conventional "Add to Places" text for that action

Summary:
I originally implemented this to show "Add <current folder> to Places" to make the menu
item more clear when invoked from the file menu or the viewport context menu because I
thought it wasn't totally clear that the action would be referring to the folder for the
visible view.

However I think in retrospect that this was a mistake. No other items in the file menu
or the viewport context menu name the current folder like this, so clearly there wasn't
a problem. And then the item's text doesn't match the text for other items.

Thie patch removes that behavior and makes the name match the style of all the other menu
item text.
FIXED-IN: 20.04.0

Reviewers: #dolphin, #vdg, meven

Reviewed By: #dolphin, meven

Subscribers: elvisangelaccio, meven, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D26590

M  +1    -3    src/dolphinmainwindow.cpp

https://commits.kde.org/dolphin/897ce8480c9c281f0501d201e33b6b0e8e7dd9a6